# Beats-Assets-Editor

./: .gitignore  .sonarcloud.properties  AGENTS.md  AGENTS_EXECUTION_SUMMARY.md  ANALISE_CACHE.md  ANALISE_OTIMIZACOES.md  ARCHITECTURE_GUIDE.md  BACKEND_ANALYSIS.md  BUILDING.md  CLAUDE.md  CODE_SMELLS_REPORT.md  DATA_INTEGRITY_REPORT.md  FRONTEND_ANALYSIS.md  IPC_SYNC_REPORT.md  LICENSE  PERFORMANCE_REPORT.md  README.md  RUST_PANIC_RISKS_REPORT.md  STATE_CACHE_REPORT.md  TYPESCRIPT_ERRORS_REPORT.md  check_output_ts.txt  check_output_ts_utf8.txt  index.html  optimize_updates.py  package-lock.json  package.json  sonar-project.properties  tmp-i18n-builder-2.cjs  tmp-i18n-builder.js  tmp_before.txt  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  check_output.txt  check_output_utf8.txt  run.sh  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/protobuf/: README.md  antigo_sounds.proto  appearances.proto  map.proto  minimap.proto  shared.proto  sounds-common.proto  sounds.proto  staticdata.proto  staticdata_new.proto  staticmapdata.proto
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: appearance_types.rs  map_api.rs  mod.rs  monsters_npc.rs  settings.rs  sounds_api.rs  sounds_api_clean.rs
src-tauri/src/commands/appearances_api/: conversion.rs  export_images.rs  import_export.rs  io.rs  (+5 more)
src-tauri/src/core/: cache.rs  errors.rs  fs_util.rs  lua.rs  mod.rs  validation.rs
src-tauri/src/features/: mod.rs
src-tauri/tests/: test_appearances.rs
(+2073 files in other folders)
